--- a/contactoPage.html
+++ b/contactoPage.html
@@ -41,7 +41,12 @@
         <h3>Volver al inicio</h3>
     </a>
 
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1mhtjgTDekzz6Vfba5E5a88p5vO9vfY0&ehbc=2E312F" width="640" height="480"></iframe>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1mhtjgTDekzz6Vfba5E5a88p5vO9vfY0&ehbc=2E312F" 
+        width="640" height="480" 
+        style="border: 1px solid #ccc; /* Add a border */
+               margin: 10px; /* Add some margin for spacing */
+               border-radius: 5px; /* Rounded corners for a nice look */">
+</iframe>
 
 
 </body>
