--- a/infoPage.html
+++ b/infoPage.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Document</title>
 </head>
 <body>
 
-<h1> Informate para constuir una mejor ciudad </h1>
+<h1> Infórmate para construir una mejor ciudad </h1>
 
+<article>
+<h2>Derechos y libertades consagrados en la Convención Americana</h2>
+<p>La Convención Americana consagra en su primera parte la obligación de los Estados de respetar los derechos y libertades en ella reconocidos, así como el deber de adoptar disposiciones de derecho interno que sean necesarias para hacer efectivo el goce de tales derechos.</p>
+ 
+ <p>En su segunda parte, la Convención consagra los siguientes derechos y libertades:</p>
+ <p>Derecho al reconocimiento de la personalidad jurídica; derecho a la vida; derecho a la integridad personal; prohibición de la esclavitud y la servidumbre; derecho a la libertad personal; principio de legalidad y retroactividad; derecho a la indemnización; protección de la honra y de la dignidad; libertad de conciencia y de religión; libertad de pensamiento y de expresión; derecho de rectificación o respuesta; derecho de reunión; libertad de asociación; protección a la familia; derecho al nombre; derechos del niño; derecho a la nacionalidad; derecho a la propiedad privada; derecho de circulación y residencia; derechos políticos; igualdad ante la ley; protección judicial y desarrollo progresivo de los derechos económicos, sociales y culturales.</p>
 
+</article>
 
-    
 </body>
 </html>
