--- a/infoPage.html
+++ b/infoPage.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-<h1> Infórmate para construir una mejor ciudad </h1>
+    <div class="portada">
+        <div class="contenido-portada">
+            <div class="texto-portada">
+                <h1 id="tituloPortada"> Informate acá </h1>  
+            </div>
+        </div>
+    </div>
 
 
 <div class="grid-container">
@@ -57,8 +63,20 @@
     </div>
 </div>
 
- 
-<!-- ////////////////////////////// -->
+<!-- FOOTER -->
+
+<footer class="footer">
+    <div class="container-footer">
+        <p>&copy; 2024 Plataforma de Denuncias Públicas. Todos los derechos reservados.</p>
+        <ul class="footer-links">
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="mailto:tucorreo@gmail.com?subject=Consulta desde el sitio web&body=Hola, me gustaría obtener más información sobre...">Contacto</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1zXpKKyBLfoU23QcEBVJf-AEP645Dn5c3?usp=drive_link">Política de Privacidad</a></li>
+        </ul>
+        <p>Para publicar un articulo, contáctanos.</p>
+    </div>
+</footer>
+
 
 
 </body>
