--- a/denPage.html
+++ b/denPage.html
@@ -62,6 +62,17 @@
 <ul id="listMensajes"></ul>
 </div>
 
+<footer class="footer">
+    <div class="container-footer">
+        <p>&copy; 2024 Plataforma de Denuncias Públicas. Todos los derechos reservados.</p>
+        <ul class="footer-links">
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="mailto:tucorreo@gmail.com?subject=Consulta desde el sitio web&body=Hola, me gustaría obtener más información sobre...">Contacto</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1zXpKKyBLfoU23QcEBVJf-AEP645Dn5c3?usp=drive_link">Política de Privacidad</a></li>
+        </ul>
+        <p> Denunciar ayuda a proteger derechos tanto propios como ajenos. Denunciar actúa como una barrera contra acciones indebidas. Las denuncias pueden ser el primer paso hacia grandes cambios sociales. </p>
+    </div>
+</footer>
 
 <script>
     function validar() {
@@ -145,11 +156,7 @@
         listErrores.innerHTML = errores.map(error => `<li>${error}</li>`).join("");
     }
 </script>
-<div class="Inicio">
-    <a href="/index.html">
-        <h3>Volver al inicio</h3>
-    </a>
-</div>
+
 
 
 </body>
