--- a/contactoPage.html
+++ b/contactoPage.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/estilos/styleCon.css">
     <title>Contacto</title>
 </head>
 <body>
+    <div class="titulo">
+        <h2>Números de Emergencia</h2>
+    </div>
     
-    <h2>Números de Emergencia</h2>
 
     <table>
         <tr>
@@ -37,18 +40,31 @@
         </tr>
     </table>
 
-    <a href="/index.html">
-        <h3>Volver al inicio</h3>
-    </a>
+  
+<div class="map-conteiner">
 
 <div class="container">
     <div class="box">
         <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1mhtjgTDekzz6Vfba5E5a88p5vO9vfY0&ehbc=2E312F">  </iframe>
-
     </div>
 
 </div>
+</div>
 
+
+<!-- FOOTER -->
+
+<footer class="footer">
+    <div class="container-footer">
+        <p>&copy; 2024 Plataforma de Denuncias Públicas. Todos los derechos reservados.</p>
+        <ul class="footer-links">
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="mailto:tucorreo@gmail.com?subject=Consulta desde el sitio web&body=Hola, me gustaría obtener más información sobre...">Contacto</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1zXpKKyBLfoU23QcEBVJf-AEP645Dn5c3?usp=drive_link">Política de Privacidad</a></li>
+        </ul>
+        <p> No dude llamar  </p>
+    </div>
+</footer>
     
 
 </body>
