--- a/contactoPage.html
+++ b/contactoPage.html
@@ -53,7 +53,7 @@
 
 
 <!-- FOOTER -->
-
+<!--  
 <footer class="footer">
     <div class="container-footer">
         <p>&copy; 2024 Plataforma de Denuncias Públicas. Todos los derechos reservados.</p>
@@ -62,10 +62,10 @@
             <li><a href="mailto:tucorreo@gmail.com?subject=Consulta desde el sitio web&body=Hola, me gustaría obtener más información sobre...">Contacto</a></li>
             <li><a href="https://drive.google.com/drive/folders/1zXpKKyBLfoU23QcEBVJf-AEP645Dn5c3?usp=drive_link">Política de Privacidad</a></li>
         </ul>
-        <p> No dude llamar  </p>
+        <p> No dude llamar. </p>
     </div>
 </footer>
-    
+-->
 
 </body>
 </html>
