--- a/contactoPage.html
+++ b/contactoPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/estilos/styleCon.css">
+    <link rel="stylesheet" href="estilos/styleCon.css">
     <title>Contacto</title>
 </head>
 <body>
@@ -53,7 +53,7 @@
 
 
 <!-- FOOTER -->
-<!--  
+
 <footer class="footer">
     <div class="container-footer">
         <p>&copy; 2024 Plataforma de Denuncias Públicas. Todos los derechos reservados.</p>
@@ -65,7 +65,7 @@
         <p> No dude llamar. </p>
     </div>
 </footer>
--->
+
 
 </body>
 </html>
